--- a/part4/package.json
+++ b/part4/package.json
@@ -12,6 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.17.3",
     "mongodb": "^6.8.0",
     "mongoose": "^8.6.1"
