--- a/part4/package.json
+++ b/part4/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^8.6.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "supertest": "^7.0.0"
   }
 }
