--- a/part4/.env
+++ b/part4/.env
@@ -1,2 +1,4 @@
 MONGODB_URI='mongodb+srv://emori1968:uVGpNNanwkkl8Qnd@cluster0.it4ey.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
 PORT=3003
+
+TEST_MONGODB_URI='mongodb+srv://emori1968:uVGpNNanwkkl8Qnd@cluster0.it4ey.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
