--- a/part4/package.json
+++ b/part4/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "test": "node --test"
+    "start": "NODE_ENV=production node index.js",
+    "dev": "NODE_ENV=development nodemon index.js",
+    "test": "NODE_ENV=test node --test"
   },
   "author": "Eduardo Mori",
   "license": "MIT",
@@ -19,7 +19,6 @@
     "mongoose": "^8.6.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15",
-    "supertest": "^7.0.0"
+    "nodemon": "^2.0.15"
   }
 }
